<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#C34922"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/najava"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/KorisnickoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vensiime"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/PasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/vnesipasvord"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/KopceLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#F3EDED"
                android:text="@string/Loginkopce" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/LoginAnonymousButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/anonimnokopce"
                    android:textAllCaps="false"
                    android:backgroundTint="#EAE0DD"
                    android:padding="12dp"
                    android:textColor="#000000"
                    android:layout_marginEnd="8dp"
                    tools:ignore="HardcodedText"/>

                <Button
                    android:id="@+id/GoogleSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/googlekopce"
                    android:textAllCaps="false"
                    android:backgroundTint="#EAE0DD"
                    android:textColor="#000000"
                    android:padding="12dp"
                    tools:ignore="HardcodedText"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>

